# quantitative-trad-backend

./: .env.example  .gitignore  API.postman_collection.json  LICENSE  README.md  alembic.ini  openapi.json  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_stock_basic.py  0003_bigint_surrogate_keys.py  0004_task_execution_records.py  0005_paper_trade_execution_costs.py  0006_backtest_runs.py  0007_query_performance_indexes.py  0008_kline_feature_indexes.py  0009_trade_query_indexes.py  0010_market_news.py  0011_fix_market_news_id_autoincrement.py  0012_ai_analysis_records.py  0013_ai_chat_messages.py  0014_ai_analysis_plan_fields.py  (+7 more)
scripts/: apply_alert_todos_comments.py  apply_market_news_comments.py  audit_stock_basic_missing.py  auto_trade_test.py  check_database_url.py  check_features.py  check_klines.py  check_stock_data.py  check_stock_pools.py  cleanup_market_data_cache.py  collect_failed_daily_symbols.py  compute_features.py  daily_kline_manager.bat  daily_kline_manager.ps1  diagnose_database_performance.py  migrate_sqlite_to_mysql.py  retry_failed_daily_klines.bat  retry_failed_daily_klines.ps1  run_all_daily_klines_batches.bat  run_all_daily_klines_batches.ps1  sync_all_daily_klines.py  sync_pool_klines.py  sync_stock_basic.py  verify_backtest_compare.py  verify_backtest_loop.py  verify_backtest_persistence.py  verify_kline_cache_loop.py  verify_kline_stability_loop.py  verify_paper_trade_loop.py  verify_pool_kline_batch_stability.py
sql/: alter_add_audit_fields.sql  alter_bigint_surrogate_keys.sql  mysql_schema.sql
(+63 files in other folders)
