[project]
name = "quantitative-trad"
version = "0.1.0"
description = "股票量化系统第一版外壳：分析、预测、热点新闻、模拟交易、定时平仓"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "apscheduler>=3.10.4",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "akshare>=1.14.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "qdrant-client>=1.9.0",
    "langgraph>=0.2.60",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0", "python-docx>=1.1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
